<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ablToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ablToolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/dimen_vertical_margin">

            <ImageView
                android:id="@+id/ivPalette"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/tvPaletteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_vertical_half_margin"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPalette" />

            <TextView
                android:id="@+id/tvPaletteDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_vertical_margin"
                android:layout_marginTop="@dimen/dimen_vertical_half_margin"
                android:layout_marginEnd="@dimen/dimen_vertical_margin"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/palette_desc"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPaletteTitle" />

            <TextView
                android:id="@+id/tvGithubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_vertical_margin"
                android:layout_marginTop="@dimen/dimen_vertical_margin"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/github"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPaletteDesc" />

            <TextView
                android:id="@+id/tvGithubDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_vertical_margin"
                android:layout_marginTop="@dimen/dimen_vertical_half_margin"
                android:layout_marginEnd="@dimen/dimen_vertical_margin"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/github_desc"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGithubTitle" />

            <TextView
                android:id="@+id/tvGithubLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_vertical_margin"
                android:layout_marginTop="@dimen/dimen_vertical_half_margin"
                android:fontFamily="@font/open_sans_regular"
                android:paddingBottom="@dimen/dimen_vertical_margin"
                android:text="@string/github_checkout"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGithubDesc" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>